# katorch

./: README.md  flake.nix  pyproject.toml  shell.nix
exercises/exercise01/: exercise01-1.py
exercises/exercise02/: exercise02-1.py
exercises/exercise03/: computational_graph  exercise03-1.py
exercises/exercise04/: exercise04-1.py  exercise04-2.py  exercise04-3.py  exercise04-4.py  exercise04-5.py
