[tool.poetry]
name = "katorch"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "sample_package" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
torch = "^2.5.1"
matplotlib = "^3.10.0"
torchviz = "^0.0.3"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
